# AI_Platform

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  claude.md  pyproject.toml
.github/workflows/: ci.yml
src/aiplatform/: __init__.py  __main__.py  app.py
src/aiplatform/api/: __init__.py  health.py
src/aiplatform/auth/: api_keys.py  config.py  hashing.py  tokens.py
src/aiplatform/auth/domain/: errors.py  models.py
src/aiplatform/auth/orm/: api_key.py  audit_log.py  tenant.py  user.py
src/aiplatform/auth/repositories/: tenant.py  user.py
src/aiplatform/cache/: client.py  health.py
src/aiplatform/core/: __init__.py  config.py  errors.py  logging.py  middleware.py  telemetry.py
src/aiplatform/db/: base.py  engine.py  health.py
src/aiplatform/gateway/: __init__.py  accounting.py  circuit_breaker.py  config.py  service.py
src/aiplatform/gateway/api/: __init__.py  dependencies.py  rate_limiter.py  router.py  schemas.py
src/aiplatform/gateway/domain/: __init__.py  errors.py  models.py  ports.py
src/aiplatform/gateway/providers/: anthropic.py  azure_openai.py  base.py  gemini.py  ollama.py  openai.py  openrouter.py  registry.py  vllm.py
src/aiplatform/router/: catalog.py  classifier.py  config.py  latency.py  service.py
src/aiplatform/router/domain/: errors.py  models.py
src/aiplatform/router/strategies/: balanced.py  base.py  cost.py  latency.py  quality.py
tests/: conftest.py
tests/unit/: test_config.py  test_errors.py  test_health.py  test_logging.py  test_middleware.py
tests/unit/gateway/: test_api.py  test_circuit_breaker.py  test_domain_models.py  test_gateway_service.py
tests/unit/router/: test_catalog.py  test_classifier.py  test_latency.py  test_service.py  test_strategies.py
