[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiplatform"
version = "0.1.0"
description = "Enterprise-grade AI platform: unified LLM gateway, intelligent routing, RAG, agents, evaluation, and observability."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
authors = [{ name = "AI Platform Engineering" }]
keywords = ["llm", "ai-gateway", "llmops", "rag", "agents", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "structlog>=24.4",
    "opentelemetry-api>=1.29",
    "opentelemetry-sdk>=1.29",
    "opentelemetry-exporter-otlp-proto-http>=1.29",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    # Gateway: HTTP client (provider adapters + health checks)
    "httpx>=0.28",
    # Gateway: provider SDKs
    "openai>=1.58",
    "anthropic>=0.43",
    "google-genai>=1.10",
    # Gateway: resilience
    "tenacity>=9.0",
    # Gateway: token accounting
    "tiktoken>=0.8",
    # Persistence: async ORM + PostgreSQL driver + migrations
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    # Cache: async Redis client
    "redis[asyncio]>=5.2",
    # Auth: JWT, password hashing, OAuth form parsing
    "pyjwt[crypto]>=2.10",
    "argon2-cffi>=23.1",
    "python-multipart>=0.0.20",
]

[project.urls]
Homepage = "https://github.com/ai-platform/ai-platform"
Documentation = "https://github.com/ai-platform/ai-platform/tree/main/docs"

[project.scripts]
aiplatform = "aiplatform.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "ruff>=0.9",
    "mypy>=1.14",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aiplatform"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "N",      # pep8-naming
    "S",      # flake8-bandit
    "A",      # flake8-builtins
    "DTZ",    # flake8-datetimez
    "T20",    # flake8-print
    "SIM",    # flake8-simplify
    "PT",     # flake8-pytest-style
    "RET",    # flake8-return
    "TID",    # flake8-tidy-imports
    "RUF",    # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106"]  # assert usage and test credentials are fine in tests

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
show_error_codes = true
mypy_path = "src"
packages = ["aiplatform"]

[[tool.mypy.overrides]]
module = "opentelemetry.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "alembic.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "--strict-markers --strict-config -ra"
filterwarnings = ["error", "ignore::DeprecationWarning:opentelemetry.*"]

[tool.coverage.run]
source = ["src/aiplatform"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
